...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_8_spacing"
        android:layout_marginEnd="@dimen/dp_16_spacing"
        android:layout_marginStart="@dimen/dp_16_spacing"
        android:layout_marginTop="@dimen/dp_8_spacing"
...
